--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,3 @@
-drf-spectacular==0.27.1  # Инструмент для автоматической генерации интерактивной документации API в формате OpenAPI 3.0 
-django-allauth==0.58.2   # Социальная авторизация (через Google, GitHub, Facebook и другие провайдеры)
+drf-spectacular==0.27.1             # Инструмент для автоматической генерации интерактивной документации API в формате OpenAPI 3.0 
+django-allauth==0.58.2              # Социальная авторизация (через Google, GitHub, Facebook и другие провайдеры)
+django_debug_toolbar==3.8.1         # Инструмент для отладки и профилирования Django-приложений
