--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,30 +1,80 @@
+# =============================================
+# Базовые правила - игнорировать всё по умолчанию
+# =============================================
+*
+
+# =============================================
+# Исключения - разрешённые корневые директории
+# =============================================
+!backend/               # Основная backend-директория проекта
+!docker-compose.yml     # Основной docker-compose файл
+!docker-compose.prod.yml # Production docker-compose файл
+
+# =============================================
+# Фильтрация внутри backend директории
+# =============================================
+# Сначала игнорируем всё в backend
+backend/*
+# Затем разрешаем только нужные поддиректории
+!backend/config/        # Конфигурационные файлы Django
+!backend/authentication/ # Модули аутентификации
+!backend/users/         # Приложение пользователей
+!backend/utils/         # Общие утилиты проекта
+# Разрешаем ключевые файлы в корне backend
+!backend/manage.py      # Django manage.py
+!backend/requirements.txt # Файл зависимостей
+!backend/Dockerfile     # Dockerfile для backend
+
+# =============================================
+# Системные и служебные файлы
+# =============================================
+.git/                   # Git директория
+.gitignore              # Файл gitignore
+
+# =============================================
 # Файлы окружения и секреты
-.env
-*.env
-secrets.json
+# =============================================
+.env                    # Файлы окружения
+*.env                   # Все вариации env-файлов
+secrets.json            # Файлы с секретами
 
+# =============================================
+# Временные и кэшированные файлы
+# =============================================
+__pycache__/            # Кэш Python
+*.py[cod]               # Скомпилированные Python файлы
+*.log                   # Лог-файлы
+*.swp                   # Vim swap файлы
+*.swo                   # Vim swap файлы
+*.bak                   # Резервные копии файлов
+
+# =============================================
+# Базы данных и медиа-файлы
+# =============================================
+*.sqlite3               # SQLite базы данных
+/media/                 # Медиа-файлы
+/static/                # Статические файлы (dev)
+/staticfiles/           # Собранные статические файлы
+
+# =============================================
+# Тесты и разработка
+# =============================================
+/tests/                 # Тестовые файлы
+/venv/                  # Виртуальное окружение
+
+# =============================================
+# IDE и редакторы
+# =============================================
+.idea/                  # JetBrains IDE
+.vscode/                # VS Code конфиги
+
+# =============================================
 # Системные файлы
-.DS_Store
-__pycache__/
-*.py[cod]
-*.swp
+# =============================================
+.DS_Store               # macOS служебный файл
+Thumbs.db               # Windows служебный файл
 
-# Git
-.git/
-.gitignore
-
-# Логи и временные файлы
-*.log
-*.tmp
-
-# Статика и медиа (если они генерируются при сборке)
-staticfiles/
-media/
-
-# Тесты и документация
-tests/
-docs/
-
-# IDE
-.idea/
-.vscode/
+# =============================================
+# Docker специфичные файлы
+# =============================================
+docker-compose.override.yml # Локальные override для docker-compose
