--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,80 +1,55 @@
-# =============================================
-# Базовые правила - игнорировать всё по умолчанию
-# =============================================
+# Игнорировать все файлы по умолчанию
 *
 
-# =============================================
-# Исключения - разрешённые корневые директории
-# =============================================
-!backend/               # Основная backend-директория проекта
-!docker-compose.yml     # Основной docker-compose файл
-!docker-compose.prod.yml # Production docker-compose файл
+# Исключения - разрешенные директории и файлы
+!backend/
+!docker-compose.yml
+!docker-compose.prod.yml
 
-# =============================================
-# Фильтрация внутри backend директории
-# =============================================
-# Сначала игнорируем всё в backend
+# Фильтрация содержимого backend
 backend/*
-# Затем разрешаем только нужные поддиректории
-!backend/config/        # Конфигурационные файлы Django
-!backend/authentication/ # Модули аутентификации
-!backend/users/         # Приложение пользователей
-!backend/utils/         # Общие утилиты проекта
-# Разрешаем ключевые файлы в корне backend
-!backend/manage.py      # Django manage.py
-!backend/requirements.txt # Файл зависимостей
-!backend/Dockerfile     # Dockerfile для backend
+!backend/config/
+!backend/authentication/ 
+!backend/users/
+!backend/utils/
+!backend/manage.py
+!backend/requirements.txt
+!backend/Dockerfile
 
-# =============================================
-# Системные и служебные файлы
-# =============================================
-.git/                   # Git директория
-.gitignore              # Файл gitignore
-
-# =============================================
-# Файлы окружения и секреты
-# =============================================
-.env                    # Файлы окружения
-*.env                   # Все вариации env-файлов
-secrets.json            # Файлы с секретами
-
-# =============================================
-# Временные и кэшированные файлы
-# =============================================
-__pycache__/            # Кэш Python
-*.py[cod]               # Скомпилированные Python файлы
-*.log                   # Лог-файлы
-*.swp                   # Vim swap файлы
-*.swo                   # Vim swap файлы
-*.bak                   # Резервные копии файлов
-
-# =============================================
-# Базы данных и медиа-файлы
-# =============================================
-*.sqlite3               # SQLite базы данных
-/media/                 # Медиа-файлы
-/static/                # Статические файлы (dev)
-/staticfiles/           # Собранные статические файлы
-
-# =============================================
-# Тесты и разработка
-# =============================================
-/tests/                 # Тестовые файлы
-/venv/                  # Виртуальное окружение
-
-# =============================================
-# IDE и редакторы
-# =============================================
-.idea/                  # JetBrains IDE
-.vscode/                # VS Code конфиги
-
-# =============================================
 # Системные файлы
-# =============================================
-.DS_Store               # macOS служебный файл
-Thumbs.db               # Windows служебный файл
+.git
+.gitignore
+.DS_Store
+Thumbs.db
 
-# =============================================
-# Docker специфичные файлы
-# =============================================
-docker-compose.override.yml # Локальные override для docker-compose
+# Файлы окружения и секреты
+.env
+*.env
+secrets.json
+
+# Кэш и временные файлы
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.log
+*.swp
+*.swo
+*.bak
+
+# Базы данных и медиа
+*.sqlite3
+/media/
+/static/
+/staticfiles/
+
+# Тесты и окружения разработки
+/tests/
+/venv/
+
+# Файлы редакторов
+.idea/
+.vscode/
+
+# Docker-специфичные файлы
+docker-compose.override.yml
