--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,1 +1,27 @@
+# Базовый образ Python
+FROM python:3.9-slim
 
+# Установка зависимостей
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Рабочая директория
+WORKDIR /app
+
+# Копирование и установка Python зависимостей
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Копирование проекта
+COPY . .
+
+# Сборка статических файлов
+RUN python manage.py collectstatic --noinput
+
+# Порт для приложения
+EXPOSE 8000
+
+# Команда запуска
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "config.wsgi"]
