--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,21 @@ POSTGRES_PASSWORD=your_db_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# OAuth настройки
-GOOGLE_OAUTH_CLIENT_ID=your-google-client-id
-GOOGLE_OAUTH_CLIENT_SECRET=your-google-client-secret
-YANDEX_OAUTH_CLIENT_ID=your-yandex-client-id
-YANDEX_OAUTH_CLIENT_SECRET=your-yandex-client-secret
+# JWT
+JWT_SECRET_KEY=your-very-secret-key-here
+
+# Google OAuth
+GOOGLE_OAUTH_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/oauth/google/callback/
+
+# Yandex OAuth
+YANDEX_OAUTH_CLIENT_ID=your-client-id
+YANDEX_OAUTH_CLIENT_SECRET=your-client-secret
+YANDEX_REDIRECT_URI=http://localhost:8000/oauth/yandex/callback/
+
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Email настройки
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
