--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # Основные настройки Django
-SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,localhost
 CSRF_TRUSTED_ORIGINS=http://127.0.0.1,http://localhost
@@ -12,18 +11,15 @@ POSTGRES_PASSWORD=your_db_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# JWT
-JWT_SECRET_KEY=your-very-secret-key-here
+# Безопасность
+SECRET_KEY=your-secret-key-here
+JWT_SECRET_KEY=your-jwt-secret-key
 
-# Google OAuth
-GOOGLE_OAUTH_CLIENT_ID=your-client-id.apps.googleusercontent.com
+# OAuth
+GOOGLE_OAUTH_CLIENT_ID=your-client-id
 GOOGLE_OAUTH_CLIENT_SECRET=your-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/oauth/google/callback/
-
-# Yandex OAuth
 YANDEX_OAUTH_CLIENT_ID=your-client-id
 YANDEX_OAUTH_CLIENT_SECRET=your-client-secret
-YANDEX_REDIRECT_URI=http://localhost:8000/oauth/yandex/callback/
 
 # CORS
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
