--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ POSTGRES_PASSWORD=your_db_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
+# Безопасность API при совместной разработке
+API_KEY=your_custom_api_key_12345
+
 # OAuth
 GOOGLE_OAUTH_CLIENT_ID=your-client-id
 GOOGLE_OAUTH_CLIENT_SECRET=your-client-secret
